# kpefk_telegram_bot

./: .env.template  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_09_29_1747-ab31f9c2bddd_create_users_table.py  2024_09_30_1428-727ca25ba722_add_field_to_users.py  2024_10_01_1452-dc629a3cf719_group_and_is_admin.py  2024_10_01_1528-5cfd7eee96e0_schedule_table.py  2024_10_01_1830-608880adf24c_edit_is_admin_column.py  2024_10_12_1525-0474a66d45ad_create_users_schedule_tables.py
bot/handlers/: __init__.py  commands.py  group.py  notification.py  schedule.py
bot/handlers/admin/: menu.py  schedule.py
bot/keyboards/: __init__.py  back.py  menu.py  pagination.py
bot/middlewares/: __init__.py  is_admin.py
bot/misc/: states.py  utils.py
core/: config.py  db_helper.py
core/models/: __init__.py  schedule.py  user.py
core/utils/: change_admin.py
